--- a/angular.json
+++ b/angular.json
@@ -32,8 +32,7 @@
             ],
             "scripts": [
               "node_modules/bootstrap/dist/js/bootstrap.min.js",
-              "node_modules/bootstrap/dist/js/bootstrap.js",
-              "node_modules/jquery/dist/jquery.js"
+              "./node_modules/jquery/dist/jquery.min.js"
             ]
           },
           "configurations": {
