--- a/package.json
+++ b/package.json
@@ -35,7 +35,8 @@
     "@auth0/angular-jwt": "^5.0.2",
     "ag-grid-angular": "^25.0.1",
     "ag-grid-community": "^25.0.1",
-    "bootstrap": "^4.6.0"
+    "bootstrap": "^4.6.0",
+    "jquery": "^3.6.3"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "~0.1000.5",
